@@ -1,1 +1,3 @@
 # Schedule-Plannar
+This is a basic calendar application that allows a user to view a calendar, add and delete events and view the events they added
+This package requires the javafx libary, and will need to be run with the vm arguments --module-path "Path to lib folder of javafx" --add-modules javafx.controls,javafx.fxml
